# VTT

./: convert_audio.py  pyproject.toml  voice_recorder.html  webs_stt.js  webs_stt.py
