[tool.poetry]
name = "VTT"
version = "0.1.0"
description = "Voice to text"
authors = ["Ihor Prokopenko <i.prokopenko.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
websockets = "^12.0"
webrtcvad = "^2.0.10"
speechrecognition = "^3.10.1"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
botocore = "^1.34.10"
boto3 = "^1.34.10"
google-cloud-speech = "^2.23.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"